[package]
name = "steam_online_notifier"
version = "1.0.0"
authors = ["LapinoLapidus <LapinoLapidus@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'
lto = true

[dependencies]
reqwest = { version = "0.10.6", features = ["blocking"] }
dotenv = "0.15.0"
serde = "1"
serde_json = "1"
notifica = { git = "https://github.com/frewsxcv/rust-notifica", rev = "71f9d723b7052be6c180619f1a08339a29cc930a" }